syntax = "proto3";

package identity.v1;

option go_package = "github.com/jupiterclapton/cenackle/gen/identity/v1;identityv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service IdentityService {
  // --- Authentification ---
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // --- Gestion Utilisateur ---
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // Utilisation de "optional" pour permettre les mises à jour partielles (PATCH)
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
}

// --- ENTITÉS ---

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// --- DTOs ---

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string full_name = 4;
}

message RegisterResponse {
  User user = 1;          // On renvoie l'user créé
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in_seconds = 4; // Unité explicite
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;  // Utile pour la sécurité (audit logs)
  string device_info = 4; // Utile pour la sécurité
}

message LoginResponse {
  User user = 1;          // On renvoie souvent l'user au login
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in_seconds = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2; // Rotation du refresh token
  int64 expires_in_seconds = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  // On pourrait ajouter ici : string role = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  optional string full_name = 2; // "optional" génère un *string en Go
  optional string email = 3;
}

message UpdateProfileResponse {
  User user = 1;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}